# nebula-code

./: .editorconfig  .gitignore  CHANGELOG_PHASE5.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  PERFORMANCE.md  PHASE5_ARCHITECTURE.md  README.md  SECURITY.md  package.json  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/cli/: Cargo.toml  README.md  package.json
apps/cli/src/: main.rs
apps/desktop/: Cargo.toml  README.md  package.json  tauri.conf.json
apps/marketplace/: README.md  next.config.js  next.config.ts  package.json
apps/marketplace/src/app/: layout.tsx  page.tsx
crates/core/: Cargo.toml  README.md
crates/core/src/: error.rs  lib.rs  project.rs  skill_card.rs
crates/nebula-agents/: Cargo.toml  README.md
crates/nebula-agents/examples/: multi_agent_collaboration.rs
crates/nebula-agents/src/: agent.rs  architect.rs  coder.rs  communication.rs  deployer.rs  lib.rs  orchestration.rs  orchestrator.rs  protocol.rs  registry.rs  reviewer.rs  tester.rs  types.rs
crates/nebula-agents/tests/: integration_tests.rs
crates/nebula-common/: Cargo.toml
crates/nebula-common/src/: lib.rs
crates/nebula-crypto/: Cargo.toml
crates/nebula-crypto/src/: lib.rs
crates/nebula-federated/: Cargo.toml
crates/nebula-federated/examples/: federated_training.rs
crates/nebula-federated/src/: client.rs  lib.rs  privacy.rs  protocol.rs  secure_aggregation.rs  server.rs  types.rs
crates/nebula-federated/tests/: integration_test.rs
crates/nebula-marketplace/: Cargo.toml  README.md
crates/nebula-marketplace/examples/: marketplace_demo.rs
crates/nebula-marketplace/src/: cli.rs  dependencies.rs  discovery.rs  execution.rs  lib.rs  persistence.rs  rating.rs  registry.rs  types.rs
crates/nebula-marketplace/tests/: advanced_integration_tests.rs  integration_tests.rs
crates/nebula-models/: Cargo.toml
crates/nebula-models/src/: lib.rs
crates/nebula-production/: Cargo.toml  README.md
crates/nebula-production/benches/: performance.rs
crates/nebula-production/examples/: multi_agent_collaboration.rs
crates/nebula-production/src/: alerting.rs  auth.rs  cache.rs  config.rs  encryption.rs  health.rs  lib.rs  load_balancer.rs  logging.rs  metrics.rs  observability.rs  optimization.rs  pool.rs  rate_limit.rs  security.rs  server.rs  tls.rs  tracing.rs
crates/nebula-skills/: Cargo.toml
crates/nebula-skills/src/: lib.rs  marketplace.rs  skill.rs  store.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: file.rs  format.rs  lib.rs  validate.rs
docs/: README.md  architecture.md
scripts/: README.md  dev.sh
tests/: README.md
