[workspace]
resolver = "2"
members = [
    "crates/nebula-marketplace",
    "apps/cli",
    "crates/nebula-agents",
    "crates/nebula-skills",
    "crates/nebula-federated",
    "crates/nebula-models",
    "crates/nebula-crypto",
    "crates/nebula-common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["0xgetz <eyren@example.com>"]
repository = "https://github.com/0xgetz/nebula-code"
homepage = "https://nebula-code.dev"

[workspace.dependencies]
# Common dependencies
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Crypto
reqwest = { version = "0.11", features = ["json"] }

# Testing
pretty_assertions = "1.4"
