[package]
name = "nebula-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core functionality for Nebula Code"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
