[package]
name = "nebula-marketplace"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Nebula skill marketplace - core types and registry"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, optional = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.23.0", features = ["v4"] }
semver = { version = "1.0.27", features = ["serde"] }

[features]
default = []
async = ["tokio"]

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.10"
