[package]
name = "nebula-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Utility functions and helpers for Nebula Code"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
